kustomize/php-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: php:8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: php-index
              mountPath: /var/www/html/index.php
              subPath: index.php
      volumes:
        - name: php-index
          configMap:
            name: php-index
