kustomize/php-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app
  namespace: demo
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
