kustomize/php-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: php.gke.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-app
                port:
                  number: 80
